Fixes and visuals

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -39,7 +39,8 @@
     "# External\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import librosa\n",
+    "import matplotlib.pyplot as plt\n",
+    "import librosa as lr\n",
     "from pydub import AudioSegment, effects\n",
     "from sklearn.model_selection import KFold\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -75,7 +76,7 @@
     "samples = [0] * multi_num\n",
     "sounds = [0] * multi_num\n",
     "names = [0] * multi_num\n",
-    "mult_dict = {}\n",
+    "label_dict = {}\n",
     "redo = False\n",
     "\n",
     "for fold in folds:\n",
@@ -111,7 +112,7 @@
     "            sounds[j] = effects.normalize(sounds[j]) # normalize\n",
     "            sounds[j] = sounds[j] + rand_gain[j] # add random gain reduction\n",
     "            p_ratio[j] = pow(10, rand_gain[j]/10) # convert to power\n",
-    "            names[j] = f'-{labels[j]}({round(p_ratio[j],2)})'\n",
+    "            names[j] = f'-{labels[j]}({round(p_ratio[j],3)})'\n",
     "\n",
     "        combined = []\n",
     "        combined.append(sounds[0].overlay(sounds[1], times=20)) # overlay sound (with repeat if base sound is longer)\n",
@@ -127,10 +128,10 @@
     "        full_label = []\n",
     "        for j in range(multi_num):\n",
     "            full_label.append((labels[j], p_ratio[j]))\n",
-    "        mult_dict[fn] = full_label\n",
+    "        label_dict[fn] = full_label # use fn as key\n",
     "\n",
     "# Save new database labels as csv\n",
-    "df = pd.DataFrame.from_dict(mult_dict, orient=\"index\")\n",
+    "df = pd.DataFrame.from_dict(label_dict, orient=\"index\")\n",
     "df.to_csv(f\"{dest_dir}multi-labels.csv\")"
    ]
   },
@@ -150,17 +151,16 @@
     "dest_dur = './multi'\n",
     "\n",
     "# Load label csv as dict\n",
-    "reader = csv.reader(open(f'{dest_dur}/multi-labels.csv'))\n",
+    "reader = csv.reader(open(f'{dest_dur}/multi-labels.csv'), delimiter=';')\n",
     "multi_dict = {}\n",
-    "for column in reader:\n",
+    "for column in reader: # convert to dict\n",
     "    key = column[0]\n",
     "    if key in multi_dict:\n",
     "        pass\n",
     "    multi_dict[key] = column[1:]\n",
     "\n",
-    "### Extract features for multi-category ###\n",
-    "def extract_features_multi(parent_dir,sub_dir,file_ext=\"*.wav\",\n",
-    "                     bands=60,frames=41):\n",
+    "# Extract features for multi-category\n",
+    "def extract_features_multi(parent_dir,sub_dir, file_ext=\"*.wav\", bands=60, frames=41):\n",
     "    def _windows(data, window_size):\n",
     "        start = 0\n",
     "        while start < len(data):\n",
@@ -171,21 +171,22 @@
     "    features, labels = [], []\n",
     "    for fn in glob.glob(os.path.join(parent_dir, sub_dir, file_ext)):\n",
     "        segment_log_specgrams, segment_labels = [], []\n",
-    "        sound_clip, xsr = librosa.load(fn)\n",
+    "        sound_clip, xsr = lr.load(fn)\n",
     "        print('Processing: %s' % fn)\n",
     "        try:\n",
-    "            label = multi_dict[fn] # label\n",
+    "            label = multi_dict[fn] # use fn as key (see mult_label.csv)\n",
     "            label = [int(literal_eval(point)[0]) for point in label] # add labels (multi categories) ex. [1,2]\n",
-    "        except KeyError: # if the sample is not in the database, ie. unseen\n",
+    "        except KeyError: # if the sample is not in the database, ie. unseen, when testing\n",
+    "            print('Unseen sample')\n",
     "            label = None\n",
     "        \n",
     "        # Extract features per window/segment\n",
     "        for (start,end) in _windows(sound_clip,window_size):\n",
     "            if(len(sound_clip[start:end]) == window_size):\n",
     "                signal = sound_clip[start:end]\n",
-    "                melspec = librosa.feature.melspectrogram(signal,n_mels=bands) # extracting melspec with 60 bands\n",
-    "                # spec = librosa.feature.spectrogram(signal, n_mels=bans) # may be interest in testing performance of spectrogram\n",
-    "                logspec = librosa.amplitude_to_db(melspec)  # converting to log scale\n",
+    "                melspec = lr.feature.melspectrogram(signal, n_mels=bands) # extracting melspec with 60 bands\n",
+    "                # spec = lr.feature.spectrogram(signal, n_mels=bans) # may be interesting in testing performance of spectrogram\n",
+    "                logspec = lr.amplitude_to_db(melspec)  # converting to log scale\n",
     "                logspec = logspec.T.flatten()[:, np.newaxis].T\n",
     "                segment_log_specgrams.append(logspec)\n",
     "                segment_labels.append(label)\n",
@@ -195,7 +196,7 @@
     "        segment_features = np.concatenate((segment_log_specgrams, np.zeros(\n",
     "            np.shape(segment_log_specgrams))), axis=3) # add one layer to axis -> (60, 40, 2)\n",
     "        for i in range(len(segment_features)): \n",
-    "            segment_features[i, :, :, 1] = librosa.feature.delta(\n",
+    "            segment_features[i, :, :, 1] = lr.feature.delta(\n",
     "                segment_features[i, :, :, 0]) # extract deltas into new layer\n",
     "        \n",
     "        if len(segment_features) > 0: # check for empty segments \n",
@@ -203,6 +204,52 @@
     "            labels.append(segment_labels)\n",
     "\n",
     "    return features, labels"
+   ]
+  },
+  {
+   "source": [
+    "## Print spectrogram features"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "look_up = [\n",
+    "    \"air_conditioner\",  # 0\n",
+    "    \"car_horn\",         # 1\n",
+    "    \"children_playing\", # 2\n",
+    "    \"dog_bark\",         # 3\n",
+    "    \"drilling\",         # 4\n",
+    "    \"engine_idling\",    # 5\n",
+    "    \"gun_shot\",         # 6\n",
+    "    \"jackhammer\",       # 7\n",
+    "    \"siren\",            # 8\n",
+    "    \"street_music\"      # 9\n",
+    "    ]\n",
+    "\n",
+    "file = 'comb-9(1.0)-3(0.4)' # add file name here\n",
+    "\n",
+    "audio= f'./multi/fold1/{file}.wav'\n",
+    "y, sr = lr.load(audio)\n",
+    "lr.feature.melspectrogram(y=y, sr=sr)\n",
+    "\n",
+    "D = np.abs(lr.stft(y))**2\n",
+    "S = lr.feature.melspectrogram(S=D)\n",
+    "S = lr.feature.melspectrogram(y=y, sr=sr, n_mels=60)\n",
+    "\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "lr.display.specshow(lr.power_to_db(S, ref=np.max), y_axis='mel', x_axis='time')\n",
+    "plt.colorbar(format='%+2.0f dB')\n",
+    "plt.title( f\"Mel spectrogram for {look_up[int(file.split('-')[1][0])]} {file.split('-')[1][1:]} and {look_up[int(file.split('-')[2][0])]} {file.split('-')[2][1:6]}\" )\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# plt.savefig(f'{file}.png')\n",
+    "plt.show()"
    ]
   },
   {
@@ -231,14 +278,16 @@
     "\n",
     "for fold in folds:\n",
     "    print(f'Now in: {fold}')\n",
-    "    features, labels = extract_features_multi(parent_dir,fold)\n",
+    "    features, labels = extract_features_multi(parent_dir, fold)\n",
     "    np.savez(f'{feat_dir}/{fold}', features=features, labels=labels)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# Create single file for full dataset through appending - quick)\n",
@@ -330,8 +379,7 @@
    "outputs": [],
    "source": [
     "cp_path = \"./models/checkpoint.hdf5\"\n",
-    "checkpoint = ModelCheckpoint(cp_path, monitor='loss', verbose=1, save_best_only=True,\n",
-    "                            mode='auto', save_freq='epoch')\n",
+    "checkpoint = ModelCheckpoint(cp_path, monitor='loss', verbose=1, save_best_only=True, mode='auto', save_freq='epoch')\n",
     "load_dir = \"./multi-processed\"\n",
     "\n",
     "data = np.load(\"{0}/{1}.npz\".format(load_dir,'full_features'),\n",
@@ -340,7 +388,7 @@
     "features = np.concatenate(data[\"features\"], axis = 0)\n",
     "labels = np.concatenate(data[\"labels\"], axis = 0)\n",
     "\n",
-    "x_train, x_test, y_train, y_test = train_test_split(features, labels, test_size=.2, callbacks=[checkpoint])\n",
+    "x_train, x_test, y_train, y_test = train_test_split(features, labels, test_size=.2)\n",
     "\n",
     "x_train = np.concatenate(x_train, axis = 0).astype(np.float32)\n",
     "y_train = np.concatenate(y_train, axis = 0).astype(np.float32)"
@@ -365,7 +413,7 @@
     "mlb.fit([[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]]) # fit mlb to the category range\n",
     "\n",
     "y_tr_array = np.array(y_train)\n",
-    "y_tr_hot = mlb.transform(y_tr_array) # this can be done because multi ones-hot arrays are not needed (as they are when comparing test to predict)\n",
+    "y_tr_hot = mlb.transform(y_tr_array) # this can be done because multi one-hot arrays are not needed (as they are when comparing test to predict)\n",
     "\n",
     "y_te_hot = []\n",
     "for y in y_test: # for each window sample of one sound file in test set\n",
@@ -379,7 +427,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Train and model for 30 epochs"
+    "## Train model and present performance"
    ]
   },
   {
@@ -390,15 +438,48 @@
    },
    "outputs": [],
    "source": [
-    "# number of epochs and batch size can be adjusted for an individual workstation\n",
     "\n",
     "model = get_network_multi()\n",
     "# model.load_weights(cp_path) # if interuption possible - load weights from last point, comment above line\n",
     "\n",
-    "history = model.fit(x_train, y_tr_hot, epochs = 30, batch_size = 48, verbose = 1)\n",
+    "# number of epochs and batch size can be adjusted for each individual workstation\n",
+    "history = model.fit(x_train, y_tr_hot, epochs = 15, batch_size = 24, verbose = 1)\n",
     "\n",
     "# model.save('./models/models-%s' % time.time())\n",
     "model.save('./models/models-multi-%s' % time.time()) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(history.history.keys())  \n",
+    "\n",
+    "# summarize history for accuracy\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(history.history['categorical_accuracy'])\n",
+    "plt.title('Categorical Accuracy')\n",
+    "plt.ylabel('Categorical Accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# plt.savefig('categorical_accuracy.png')\n",
+    "plt.show()\n",
+    "\n",
+    "# summarize history for loss\n",
+    "plt.figure(figsize=(12, 6))\n",
+    "plt.plot(history.history['loss'])\n",
+    "plt.title('Model Loss')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.tight_layout()\n",
+    "\n",
+    "# plt.savefig('loss.png')\n",
+    "plt.show()"
    ]
   },
   {
@@ -414,7 +495,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = tf.keras.models.load_model('./models/models-multi-1600424459.55954')"
+    "model = tf.keras.models.load_model('./models/models-multi-1601164127.2587252')"
    ]
   },
   {
